src/examples/errors/call_type_mismatch_raw.del


def f(int a) -> nil {

    return;
}

def main() -> nil {

    //
    //  This is the wrong type
    //
    f(3.33);

    return;
}